# rust-simple-web-app

./: LICENSE  README.txt
backend/: .template.env  Cargo.toml
backend/migrate/: init.sql
backend/src/: app.rs  main.rs
backend/src/auth/: auth_service.rs  mod.rs
backend/src/database/: mod.rs
backend/src/error/: mod.rs
backend/src/model/: user_model.rs
backend/src/server/: mod.rs
backend/src/user/: mod.rs  user_profile.rs  user_service.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/styles/: form.css  global.css
frontend/src/views/: home.vue  login.vue  register.vue
